<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="cen.xiaoyuan.gobang.activity.MainActivity">
    <item
        android:icon="@drawable/twotone_save"
        android:id="@+id/action_save"
        android:orderInCategory="100"
        android:title="@string/action_save"/>
    <item
        android:icon="@drawable/twotone_folder"
        android:id="@+id/action_save_load"
        android:orderInCategory="100"
        android:title="@string/action_save_load"/>
    <item
        android:icon="@drawable/outline_undo"
        android:id="@+id/action_undo"
        android:orderInCategory="100"
        android:title="@string/action_undo" />
    <item
        android:icon="@drawable/twotone_refresh"
        android:id="@+id/action_new"
        android:orderInCategory="100"
        android:title="@string/action_new_game" />

    <item
        android:icon="@drawable/twotone_settings"
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"/>
    <item
        android:icon="@drawable/twotone_error"
        android:id="@+id/action_help"
        android:orderInCategory="100"
        android:title="@string/action_help" />
</menu>